--- a/package.json
+++ b/package.json
@@ -1,35 +1,62 @@
 {
-  "name": "@conversationai/status-checker",
-  "description": "Example code for an authorship experience using the perspective API",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/conversationai/perspectiveapi-authorship-demo"
-  },
-  "version": "0.2.1",
+  "name": "perspectiveapi-authorship-demo",
+  "version": "0.3.0",
   "license": "Apache-2.0",
   "scripts": {
-    "setup": "mkdir -p build/config/ && rsync --ignore-existing config/deploy_config.template.json build/config/deploy_config.json && cd ./scripts && typings install && cd ../ && ./act.sh setup yarn && ./act.sh setup typings && rsync --ignore-existing node_modules/@conversationai/perspectiveapi-simple-server/server_config.template.json build/config/dev_server_config.json && rsync --ignore-existing node_modules/@conversationai/perspectiveapi-simple-server/server_config.template.json build/config/prod_server_config.json",
-    "build": "./act.sh setup typings && ./act.sh build prod_webapp",
-    "test": "./act.sh test webapp"
+    "ng": "ng",
+    "serve": "npm run setup && ./node_modules/.bin/concurrently \"npm run start:dev-server\" \"ng serve --proxy proxy.conf.json\"",
+    "start:dev-server": "NODE_ENV=development node node_modules/@conversationai/perspectiveapi-simple-server/build/server/run_server.js build/config/server_config.json",
+    "start:prod-server": "NODE_ENV=production node node_modules/@conversationai/perspectiveapi-simple-server/build/server/run_server.js build/config/server_config.json",
+    "setup": "mkdir -p build/config/ && rsync --ignore-existing config/server_config.template.json build/config/server_config.json",
+    "build": "npm run build:prod",
+    "build:dev": "npm run setup && ng build",
+    "build:prod": "npm run setup && ng build --prod",
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e"
   },
+  "private": true,
   "dependencies": {
-    "js-sha256": "^0.5.0"
+    "@angular/animations": "^4.0.3",
+    "@angular/common": "^4.0.0",
+    "@angular/compiler": "^4.0.0",
+    "@angular/core": "^4.0.0",
+    "@angular/forms": "^4.0.0",
+    "@angular/http": "^4.0.0",
+    "@angular/material": "^2.0.0-beta.3",
+    "@angular/platform-browser": "^4.0.0",
+    "@angular/platform-browser-dynamic": "^4.0.0",
+    "@angular/router": "^4.0.0",
+    "@conversationai/perspectiveapi-simple-server": "^0.1.2",
+    "concurrently": "^3.4.0",
+    "core-js": "^2.4.1",
+    "d3-interpolate": "^1.1.4",
+    "gsap": "^1.19.1",
+    "hammerjs": "^2.0.8",
+    "js-sha256": "^0.5.0",
+    "rxjs": "^5.1.0",
+    "zone.js": "0.8.5"
   },
   "devDependencies": {
-    "@angular/cli": "^1.0.0-rc.1",
-    "@conversationai/perspectiveapi-simple-server": "^0.1.0",
-    "concurrently": "^3.4.0",
-    "jasmine": "^2.5.2",
-    "jasmine-core": "^2.4.1",
-    "mocha": "^3.0.2",
-    "rimraf": "^2.5.2",
-    "shell-quote": "^1.6.1",
-    "supertest": "^3.0.0",
-    "to-string-loader": "^1.1.4",
-    "ts-node": "^2.1.0",
-    "tslint": "^4.5.1",
-    "typedoc": "^0.5.1",
-    "typescript": "^2.2.1",
-    "typings": "^2.1.0"
+    "@angular/cli": "1.0.0",
+    "@angular/compiler-cli": "^4.0.0",
+    "@types/d3-interpolate": "^1.1.5",
+    "@types/gapi": "^0.0.31",
+    "@types/greensock": "^1.15.32",
+    "@types/jasmine": "2.5.38",
+    "@types/node": "~6.0.60",
+    "codelyzer": "~2.0.0",
+    "jasmine-core": "~2.5.2",
+    "jasmine-spec-reporter": "~3.2.0",
+    "karma": "~1.4.1",
+    "karma-chrome-launcher": "~2.0.0",
+    "karma-cli": "~1.0.1",
+    "karma-coverage-istanbul-reporter": "^0.2.0",
+    "karma-jasmine": "~1.1.0",
+    "karma-jasmine-html-reporter": "^0.2.2",
+    "protractor": "~5.1.0",
+    "ts-node": "~2.0.0",
+    "tslint": "~4.5.0",
+    "typescript": "~2.2.0"
   }
 }
