--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "perspectiveapi-authorship-demo",
+  "name": "@conversationai/perspectiveapi-authorship-demo",
   "version": "0.3.0",
   "license": "Apache-2.0",
   "scripts": {
@@ -15,7 +15,6 @@
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
-  "private": true,
   "dependencies": {
     "@angular/animations": "^4.0.3",
     "@angular/common": "^4.0.0",
