--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@angular/animations": "^4.0.3",
+    "@angular/cdk": "^2.0.0-beta.8",
     "@angular/common": "^4.0.0",
     "@angular/compiler": "^4.0.0",
     "@angular/core": "^4.0.0",
@@ -31,7 +32,9 @@
     "core-js": "^2.4.1",
     "d3-interpolate": "^1.1.4",
     "gsap": "^1.19.1",
+    "hammerjs": "^2.0.8",
     "js-sha256": "^0.5.0",
+    "ngx-color-picker": "^4.3.0",
     "rxjs": "^5.1.0",
     "zone.js": "0.8.5"
   },
