--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "hammerjs": "^2.0.8",
     "js-sha256": "^0.5.0",
     "ngx-color-picker": "^4.3.0",
+    "node-emoji": "^1.8.1",
     "rxjs": "^5.1.0",
+    "twemoji": "^2.5.0",
     "zone.js": "0.8.5"
   },
   "devDependencies": {
