--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,12 @@
 language: node_js
 node_js:
   - "lts/*"
+addons:
+  chrome: stable
+cache:
+  yarn: true
+  directories:
+    - "node_modules"
 before_install:
   - npm install -g yarn typings typescript ts-node mocha protractor angular-cli karma-cli
   - npm run setup
