--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ cache:
   directories:
     - "node_modules"
 before_install:
+  - export CHROME_BIN=chromium-browser
+  - export DISPLAY=:99.0
   - npm install -g yarn typings typescript ts-node mocha protractor angular-cli karma-cli
   - npm run setup
 install:
