--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,7 @@ cache:
   directories:
     - "node_modules"
 before_install:
-  - export CHROME_BIN=chromium-browser
-  - export DISPLAY=:99.0
+  - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
   - npm install -g yarn typings typescript ts-node mocha protractor angular-cli karma-cli
   - npm run setup
 install:
