Experimenting with webcomponent angular component lib; currently not compiling.

--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -10,5 +10,9 @@
   "exclude": [
     "test.ts",
     "**/*.spec.ts"
-  ]
+  ],
+  "angularCompilerOptions": {
+    "debug": false,
+    "genDir": "../out-tsc/app"
+  }
 }
