--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,5 +17,9 @@
       "es2016",
       "dom"
     ]
+  },
+  "angularCompilerOptions": {
+    "debug": false,
+    "genDir": "./build/out-tsc"
   }
 }
