--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "d3-interpolate": "^1.1.4",
     "gsap": "^1.19.1",
     "hammerjs": "^2.0.8",
+    "jasmine": "^2.8.0",
     "js-sha256": "^0.5.0",
     "ngx-color-picker": "^4.3.0",
     "node-emoji": "^1.8.1",
@@ -46,10 +47,10 @@
     "@types/d3-interpolate": "^1.1.5",
     "@types/gapi": "^0.0.31",
     "@types/greensock": "^1.15.32",
-    "@types/jasmine": "2.5.38",
+    "@types/jasmine": "^2.8.2",
     "@types/node": "~6.0.60",
     "codelyzer": "~2.0.0",
-    "jasmine-core": "~2.5.2",
+    "jasmine-core": "^2.8.0",
     "jasmine-spec-reporter": "~3.2.0",
     "karma": "~1.4.1",
     "karma-chrome-launcher": "~2.0.0",
