--- a/package.json
+++ b/package.json
@@ -47,10 +47,10 @@
     "@types/d3-interpolate": "^1.1.5",
     "@types/gapi": "^0.0.31",
     "@types/greensock": "^1.15.32",
-    "@types/jasmine": "^2.8.2",
+    "@types/jasmine": "^2.5.38",
     "@types/node": "~6.0.60",
     "codelyzer": "~4.0.1",
-    "jasmine-core": "^2.8.0",
+    "jasmine-core": "~2.5.2",
     "jasmine-spec-reporter": "~3.2.0",
     "karma": "~1.4.1",
     "karma-chrome-launcher": "~2.0.0",
