--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@angular/platform-browser-dynamic": "^5.0.1",
     "@angular/router": "^5.0.1",
     "@conversationai/perspectiveapi-simple-server": "^0.1.2",
+    "@types/lodash": "^4.14.85",
     "concurrently": "^3.4.0",
     "core-js": "^2.4.1",
     "d3-interpolate": "^1.1.4",
@@ -35,6 +36,7 @@
     "hammerjs": "^2.0.8",
     "jasmine": "^2.8.0",
     "js-sha256": "^0.5.0",
+    "lodash": "^4.17.4",
     "ngx-color-picker": "^4.3.0",
     "node-emoji": "^1.8.1",
     "rxjs": "^5.5.2",
