Adds some tests for the loading icon style settings.

--- a/package.json
+++ b/package.json
@@ -52,15 +52,19 @@
     "@types/greensock": "^1.15.32",
     "@types/jasmine": "~2.8.2",
     "@types/node": "~6.0.60",
+    "chai": "^4.1.2",
     "codelyzer": "~4.0.1",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~3.2.0",
-    "karma": "~1.4.1",
-    "karma-chrome-launcher": "~2.0.0",
+    "karma": "^1.7.1",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^2.2.0",
     "karma-cli": "~1.0.1",
     "karma-coverage-istanbul-reporter": "^0.2.0",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-mocha": "^1.3.0",
+    "mocha": "^4.0.1",
     "protractor": "~5.1.0",
     "ts-node": "~2.0.0",
     "tslint": "~4.5.0",
