--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@angular/platform-browser-dynamic": "^5.0.1",
     "@angular/router": "^5.0.1",
     "@conversationai/perspectiveapi-simple-server": "^0.1.2",
+    "@types/grecaptcha": "^2.0.34",
     "@types/lodash": "^4.14.85",
     "concurrently": "^3.4.0",
     "core-js": "^2.4.1",
