--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "ngx-color-picker": "^4.3.0",
     "node-emoji": "^1.8.1",
     "rxjs": "^5.5.2",
+    "toxiclibsjs": "^0.3.3",
     "twemoji": "^2.5.0",
     "zone.js": "^0.8.5"
   },
