--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/lodash": "^4.14.85",
     "concurrently": "^3.4.0",
     "core-js": "^2.4.1",
+    "d3-color": "^1.0.3",
     "d3-interpolate": "^1.1.4",
     "gsap": "^1.19.1",
     "hammerjs": "^2.0.8",
