--- a/package.json
+++ b/package.json
@@ -31,11 +31,10 @@
     "@types/lodash": "^4.14.85",
     "concurrently": "^3.4.0",
     "core-js": "^2.4.1",
-    "d3-color": "^1.0.3",
     "d3-interpolate": "^1.1.4",
     "gsap": "^1.19.1",
     "hammerjs": "^2.0.8",
-    "jasmine": "^2.8.0",
+    "jasmine": "~2.8.0",
     "js-sha256": "^0.5.0",
     "lodash": "^4.17.4",
     "ngx-color-picker": "^4.3.0",
