--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "zone.js": "^0.8.5"
   },
   "devDependencies": {
-    "@angular/cli": "^1.0.0",
+    "@angular/cli": "~1.5.5",
     "@angular/compiler-cli": "^5.0.1",
     "@types/d3-interpolate": "^1.1.5",
     "@types/gapi": "^0.0.31",
