Testing out getting convai-checker to work with angular elements library to function as a webcomponent.

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/common": "^5.0.1",
     "@angular/compiler": "^5.0.1",
     "@angular/core": "^5.0.1",
+    "@angular/elements": "github:angular/elements-builds#labs/elements",
     "@angular/forms": "^5.0.1",
     "@angular/http": "^5.0.1",
     "@angular/material": "^5.0.0-rc0",
@@ -29,6 +30,7 @@
     "@angular/router": "^5.0.1",
     "@conversationai/perspectiveapi-simple-server": "^0.1.2",
     "@types/lodash": "^4.14.85",
+    "@webcomponents/custom-elements": "^1.0.6",
     "concurrently": "^3.4.0",
     "core-js": "^2.4.1",
     "d3-color": "^1.0.3",
