--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "node-emoji": "^1.8.1",
     "rxjs": "^5.5.2",
     "toxiclibsjs": "^0.3.3",
+    "twemoji": "^2.5.0",
     "zone.js": "^0.8.5"
   },
   "devDependencies": {
