--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@conversationai/perspectiveapi-authorship-demo",
-  "version": "0.5.0",
+  "version": "0.5.1",
   "license": "Apache-2.0",
   "scripts": {
     "ng": "ng",
@@ -18,18 +18,19 @@
     "publish": "npm publish dist"
   },
   "peerDependencies": {
-    "@angular/animations": "^5.2.0",
-    "@angular/cdk": "^5.0.4",
-    "@angular/common": "^5.0.2",
-    "@angular/compiler": "^5.0.2",
-    "@angular/core": "^5.0.2",
-    "@angular/elements": "github:angular/elements-builds#labs/elements",
-    "@angular/forms": "^5.0.1",
-    "@angular/http": "^5.0.2",
-    "@angular/material": "^5.0.4",
-    "@angular/platform-browser": "^5.0.1",
-    "@angular/platform-browser-dynamic": "^5.0.1",
-    "@angular/router": "^5.0.1"
+    "@angular/animations": "^5.2.10",
+    "@angular/cdk": "^5.2.5",
+    "@angular/common": "^5.2.10",
+    "@angular/compiler": "^5.2.10",
+    "@angular/compiler-cli": "^5.2.10",
+    "@angular/core": "^5.2.10",
+    "@angular/elements": "6.0.0-rc.5",
+    "@angular/forms": "^5.2.10",
+    "@angular/http": "^5.2.10",
+    "@angular/material": "^5.2.5",
+    "@angular/platform-browser": "^5.2.10",
+    "@angular/platform-browser-dynamic": "^5.2.10",
+    "@angular/router": "^5.2.10"
   },
   "dependencies": {
     "@conversationai/perspectiveapi-simple-server": "^0.1.4",
@@ -54,20 +55,20 @@
     "zone.js": "^0.8.5"
   },
   "devDependencies": {
-    "@angular/animations": "^5.2.0",
-    "@angular/cdk": "^5.0.4",
+    "@angular/animations": "^5.2.10",
+    "@angular/cdk": "^5.2.5",
     "@angular/cli": "~1.5.5",
-    "@angular/common": "^5.0.2",
-    "@angular/compiler": "^5.0.2",
-    "@angular/compiler-cli": "^5.0.1",
-    "@angular/core": "^5.0.2",
+    "@angular/compiler-cli": "^5.2.10",
+    "@angular/common": "^5.2.10",
+    "@angular/compiler": "^5.2.10",
+    "@angular/core": "^5.2.10",
     "@angular/elements": "github:angular/elements-builds#labs/elements",
-    "@angular/forms": "^5.0.1",
-    "@angular/http": "^5.0.2",
-    "@angular/material": "^5.0.4",
-    "@angular/platform-browser": "^5.0.1",
-    "@angular/platform-browser-dynamic": "^5.0.1",
-    "@angular/router": "^5.0.1",
+    "@angular/forms": "^5.2.10",
+    "@angular/http": "^5.2.10",
+    "@angular/material": "^5.2.5",
+    "@angular/platform-browser": "^5.2.10",
+    "@angular/platform-browser-dynamic": "^5.2.10",
+    "@angular/router": "^5.2.10",
     "@types/jasmine": "~2.8.2",
     "@types/node": "~9.6.5",
     "jasmine-core": "~2.8.0",
