--- a/src/tsconfig.spec.json
+++ b/src/tsconfig.spec.json
@@ -13,6 +13,6 @@
   ],
   "include": [
     "**/*.spec.ts",
-    "../node_modules/@types/**/*.d.ts"
+    "../node_modules/@types/gapi/*.d.ts"
   ]
 }
