--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "start:prod-server": "NODE_ENV=production node node_modules/@conversationai/perspectiveapi-simple-server/build/server/run_server.js build/config/server_config.json",
     "setup": "mkdir -p build/config/ && rsync --ignore-existing config/server_config.template.json build/config/server_config.json",
     "build": "npm run build:prod",
-    "build:dev": "npm run setup && ng build",
-    "build:prod": "npm run setup && ng build --prod --aot=false --extract-css=false --build-optimizer=false",
+    "build:dev": "npm run setup && ng build --project perspectiveapi-authorship-demo",
+    "build:dev-customElements": "npm run setup && ng build --project customCheckerElements",
+    "build:prod": "npm run setup && ng build --project perspectiveapi-authorship-demo --prod --aot=false --extract-css=false --build-optimizer=false",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
@@ -23,15 +24,15 @@
     "@angular/compiler": "6.0.0",
     "@angular/compiler-cli": "6.0.0",
     "@angular/core": "6.0.0",
-    "@angular/elements": "github:angular/elements-builds#labs/elements",
+    "@angular/elements": "6.0.0",
     "@angular/forms": "6.0.0",
     "@angular/http": "6.0.0",
     "@angular/material": "6.0.1",
     "@angular/platform-browser": "6.0.0",
     "@angular/platform-browser-dynamic": "6.0.0",
     "@angular/router": "6.0.0",
-    "gsap": "^1.20.4",
-    "@types/gsap": "^1.19.2"
+    "@types/gsap": "^1.19.2",
+    "gsap": "^1.20.4"
   },
   "dependencies": {
     "@conversationai/perspectiveapi-simple-server": "^0.1.4",
@@ -56,14 +57,15 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~0.6.0",
     "@angular/animations": "6.0.0",
     "@angular/cdk": "6.0.1",
     "@angular/cli": "6.0.1",
-    "@angular/compiler-cli": "6.0.0",
     "@angular/common": "6.0.0",
     "@angular/compiler": "6.0.0",
+    "@angular/compiler-cli": "6.0.0",
     "@angular/core": "6.0.0",
-    "@angular/elements": "github:angular/elements-builds#labs/elements",
+    "@angular/elements": "6.0.0",
     "@angular/forms": "6.0.0",
     "@angular/http": "6.0.0",
     "@angular/material": "6.0.1",
@@ -86,7 +88,6 @@
     "protractor": "~5.1.0",
     "ts-node": "~2.0.0",
     "tslint": "~4.5.0",
-    "typescript": "2.7.2",
-    "@angular-devkit/build-angular": "~0.6.0"
+    "typescript": "2.7.2"
   }
 }
