--- a/package.json
+++ b/package.json
@@ -47,17 +47,17 @@
     "d3-interpolate": "^1.1.4",
     "gsap": "^1.20.4",
     "hammerjs": "^2.0.8",
-    "jasmine": "~2.8.0",
+    "jasmine": "2.8.0",
     "lodash": "^4.17.4",
     "ngx-color-picker": "^4.3.0",
     "node-emoji": "^1.8.1",
-    "rxjs": "^6.1.0",
+    "rxjs": "6.1.0",
     "toxiclibsjs": "^0.3.3",
     "twemoji": "^2.5.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.6.0",
+    "@angular-devkit/build-angular": "0.6.1",
     "@angular/animations": "6.0.0",
     "@angular/cdk": "6.0.1",
     "@angular/cli": "6.0.1",
