--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@angular/platform-browser": "6.0.0",
     "@angular/platform-browser-dynamic": "6.0.0",
     "@angular/router": "6.0.0",
-    "gsap": "^1.20.4",
+    "gsap": "1.20.4",
     "@types/gsap": "^1.19.2"
   },
   "dependencies": {
@@ -44,7 +44,7 @@
     "core-js": "^2.4.1",
     "d3-color": "^1.0.3",
     "d3-interpolate": "^1.1.4",
-    "gsap": "^1.20.4",
+    "gsap": "1.20.4",
     "hammerjs": "^2.0.8",
     "jasmine": "~2.8.0",
     "lodash": "^4.17.4",
