--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "packagr": "ng-packagr -p ng-package.json"
+    "packagr": "ng-packagr -p ng-package.json && cp -r ./src/assets ./dist/src/assets"
   },
   "peerDependencies": {
     "@angular/animations": "6.0.0",
