--- a/package.json
+++ b/package.json
@@ -58,12 +58,13 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~0.6.0",
     "@angular/animations": "^6.0.0",
     "@angular/cdk": "^6.0.1",
     "@angular/cli": "^6.0.1",
-    "@angular/compiler-cli": "^6.0.0",
     "@angular/common": "^6.0.0",
     "@angular/compiler": "^6.0.0",
+    "@angular/compiler-cli": "^6.0.0",
     "@angular/core": "^6.0.0",
     "@angular/elements": "^6.0.0",
     "@angular/forms": "^6.0.0",
@@ -88,7 +89,6 @@
     "protractor": "~5.1.0",
     "ts-node": "~2.0.0",
     "tslint": "~4.5.0",
-    "typescript": "~2.7.2",
-    "@angular-devkit/build-angular": "~0.6.0"
+    "typescript": "~2.7.2"
   }
 }
