--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@conversationai/perspectiveapi-authorship-demo",
-  "version": "0.6.5",
+  "version": "0.6.6",
   "license": "Apache-2.0",
   "scripts": {
     "ng": "ng",
@@ -12,11 +12,12 @@
     "build:dev": "npm run setup && ng build --project perspectiveapi-authorship-demo",
     "build:dev-customElements": "npm run setup && ng build --project customCheckerElements",
     "build:prod": "npm run setup && ng build --project perspectiveapi-authorship-demo --prod --aot=false --extract-css=false --build-optimizer=false",
+    "build:prod-customElements": "npm run setup && ng build --project customCheckerElements --prod --aot=false --extract-css=false --build-optimizer=false",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "packagr": "ng-packagr -p ng-package.json && cp -r ./src/assets ./dist/src/assets",
-    "build-plugin-js": "npm run build:prod && cat build/static/runtime*.js build/static/polyfills*.js build/static/main*.js >build/static/perspective_authorship_widget.js"
+    "build-plugin-js": "npm run build:prod-customElements && cat build/static/runtime*.js build/static/polyfills*.js build/static/main*.js >build/static/perspective_authorship_widget.js"
   },
   "peerDependencies": {
     "@angular/animations": "6.0.0",
