--- a/package.json
+++ b/package.json
@@ -12,11 +12,18 @@
     "build:dev": "npm run setup && ng build --project perspectiveapi-authorship-demo",
     "build:dev-customElements": "npm run setup && ng build --project customCheckerElements",
     "build:prod": "npm run setup && ng build --project perspectiveapi-authorship-demo --prod --aot=false --extract-css=false --build-optimizer=false",
+    "build:lib": "ng-packagr -p ng-package.json && cp -r ./src/assets ./dist/src/assets",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "packagr": "ng-packagr -p ng-package.json && cp -r ./src/assets ./dist/src/assets",
     "build-plugin-js": "npm run build:prod && cat build/static/runtime*.js build/static/polyfills*.js build/static/main*.js >build/static/perspective_authorship_widget.js"
+  },
+  "ngPackage": {
+    "$schema": "./node_modules/ng-packagr/ng-package.schema.json",
+    "lib": {
+      "entryFile": "public_api.ts"
+    },
+    "dest": "dist"
   },
   "peerDependencies": {
     "@angular/animations": "^6.0.0",
@@ -32,33 +39,42 @@
     "@angular/platform-browser": "^6.0.0",
     "@angular/platform-browser-dynamic": "^6.0.0",
     "@angular/router": "^6.0.0",
-    "gsap": "^1.20.6",
-    "@types/gsap": "^1.19.2"
-  },
-  "dependencies": {
-    "@conversationai/perspectiveapi-simple-server": "^0.1.5",
     "@types/d3-interpolate": "^1.1.5",
     "@types/gapi": "^0.0.31",
     "@types/gsap": "^1.19.2",
     "@types/lodash": "^4.14.108",
     "@webcomponents/custom-elements": "^1.0.6",
-    "concurrently": "^3.4.0",
     "core-js": "^2.4.1",
     "d3-color": "^1.0.3",
     "d3-interpolate": "^1.1.4",
     "gsap": "^1.20.6",
     "hammerjs": "^2.0.8",
-    "jasmine": "2.8.0",
     "lodash": "^4.17.4",
     "ngx-color-picker": "^4.3.0",
     "node-emoji": "^1.8.1",
-    "rxjs": "6.1.0",
+    "rxjs": "^6.1.0",
+    "toxiclibsjs": "^0.3.3",
+    "twemoji": "^2.5.0",
+    "zone.js": "^0.8.26"
+  },
+  "dependencies": {
+    "@types/gapi": "^0.0.31",
+    "@webcomponents/custom-elements": "^1.0.6",
+    "core-js": "^2.4.1",
+    "d3-color": "^1.0.3",
+    "d3-interpolate": "^1.1.4",
+    "gsap": "^1.20.6",
+    "hammerjs": "^2.0.8",
+    "lodash": "^4.17.4",
+    "ngx-color-picker": "^4.3.0",
+    "node-emoji": "^1.8.1",
+    "rxjs": "^6.1.0",
     "toxiclibsjs": "^0.3.3",
     "twemoji": "^2.5.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.6.0",
+    "@angular-devkit/build-angular": "^0.8.7",
     "@angular/animations": "^6.0.0",
     "@angular/cdk": "^6.0.1",
     "@angular/cli": "^6.0.1",
@@ -73,9 +89,12 @@
     "@angular/platform-browser": "^6.0.0",
     "@angular/platform-browser-dynamic": "^6.0.0",
     "@angular/router": "^6.0.0",
-    "@types/jasmine": "~2.8.2",
-    "@types/node": "~9.6.5",
-    "jasmine-core": "~2.8.0",
+    "@conversationai/perspectiveapi-simple-server": "^0.1.5",
+    "@types/jasmine": "^3.3.5",
+    "@types/node": "^10.0.0",
+    "concurrently": "^4.1.0",
+    "jasmine": "3.3.0",
+    "jasmine-core": "~3.3.0",
     "jasmine-spec-reporter": "~3.2.0",
     "karma": "^1.7.1",
     "karma-chrome-launcher": "^2.2.0",
@@ -85,10 +104,10 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "karma-mocha": "^1.3.0",
     "mocha": "^4.0.1",
-    "ng-packagr": "^2.4.2",
-    "protractor": "~5.1.0",
+    "ng-packagr": "^4.4.5",
+    "protractor": "^5.4.2",
     "ts-node": "~2.0.0",
     "tslint": "~4.5.0",
-    "typescript": "~2.7.2"
+    "typescript": "~2.9.2"
   }
 }
