--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "@angular/platform-browser": "^6.0.0",
     "@angular/platform-browser-dynamic": "^6.0.0",
     "@angular/router": "^6.0.0",
-    "gsap": "^1.20.6",
-    "@types/gsap": "^1.19.2"
+    "@types/gsap": "^1.19.2",
+    "gsap": "^1.20.6"
   },
   "dependencies": {
     "@conversationai/perspectiveapi-simple-server": "^0.1.5",
@@ -43,6 +43,7 @@
     "@types/gsap": "^1.19.2",
     "@types/lodash": "^4.14.108",
     "@webcomponents/custom-elements": "^1.0.6",
+    "codelyzer": "4.2.1",
     "concurrently": "^3.4.0",
     "core-js": "^2.4.1",
     "d3-color": "^1.0.3",
