Still trying to fix travis CI errors.

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ cache:
   yarn: true
   directories:
     - "node_modules"
+services:
+  - xvfb
 before_install:
   - export CHROME_BIN=/usr/bin/google-chrome
   - export DISPLAY=:99.0
