--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/cdk": "^7.3.7",
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
+    "@angular/compiler-cli": "~7.2.0",
     "@angular/core": "~7.2.0",
     "@angular/elements": "^7.2.0",
     "@angular/forms": "~7.2.0",
