--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "hammerjs": "^2.0.8",
     "jasmine": "3.5.0",
     "lodash": "^4.17.4",
+    "ng-recaptcha": "^5.0.0",
     "ngx-color-picker": "^8.2.0",
     "node-emoji": "^1.8.1",
     "rxjs": "6.5.3",
