--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@conversationai/perspectiveapi-authorship-demo",
-  "version": "0.6.8",
+  "version": "0.7.0",
   "license": "Apache-2.0",
   "scripts": {
     "ng": "ng",
@@ -37,7 +37,7 @@
     "gsap": "^1.20.6"
   },
   "dependencies": {
-    "@conversationai/perspectiveapi-simple-server": "^0.1.5",
+    "@conversationai/perspectiveapi-simple-server": "^0.1.9",
     "@types/d3-interpolate": "^1.1.5",
     "@types/gapi": "^0.0.39",
     "@types/gsap": "^1.19.2",
@@ -52,6 +52,7 @@
     "hammerjs": "^2.0.8",
     "jasmine": "3.5.0",
     "lodash": "^4.17.4",
+    "ng-recaptcha": "^5.0.0",
     "ngx-color-picker": "^8.2.0",
     "node-emoji": "^1.8.1",
     "rxjs": "6.5.3",
