Enables --aot compiling for prod build by fixing some issue with the Angular elements setup for the checker component.

--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "build": "npm run build:prod",
     "build:dev": "npm run setup && ng build --project perspectiveapi-authorship-demo",
     "build:dev-customElements": "npm run setup && ng build --project customCheckerElements",
-    "build:prod": "npm run setup && ng build --project perspectiveapi-authorship-demo --prod --aot=false --extract-css=false --build-optimizer=false",
-    "build:prod-customElements": "npm run setup && ng build --project customCheckerElements --prod --aot=false --extract-css=false --build-optimizer=false",
+    "build:prod": "npm run setup && ng build --project perspectiveapi-authorship-demo --prod --extract-css=false --build-optimizer=false",
+    "build:prod-customElements": "npm run setup && ng build --project customCheckerElements --prod --extract-css=false --build-optimizer=false",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
