--- a/package.json
+++ b/package.json
@@ -20,19 +20,18 @@
     "build-plugin-js": "npm run build:prod-customElements && cat build/static/runtime*.js build/static/polyfills*.js build/static/main*.js >build/static/perspective_authorship_widget.js"
   },
   "peerDependencies": {
-    "@angular/animations": "^7.2.14",
-    "@angular/cdk": "^7.3.7",
-    "@angular/common": "~7.2.0",
-    "@angular/compiler": "~7.2.0",
-    "@angular/compiler-cli": "~7.2.0",
-    "@angular/core": "~7.2.0",
-    "@angular/elements": "^7.2.0",
-    "@angular/forms": "~7.2.0",
-    "@angular/http": "^6.0.3",
-    "@angular/material": "^7.3.7",
-    "@angular/platform-browser": "~7.2.0",
-    "@angular/platform-browser-dynamic": "~7.2.0",
-    "@angular/router": "~7.2.0",
+    "@angular/animations": "^11.0.0",
+    "@angular/cdk": "^11.0.0",
+    "@angular/common": "~11.0.0",
+    "@angular/compiler": "~11.0.0",
+    "@angular/compiler-cli": "~11.0.0",
+    "@angular/core": "~11.0.0",
+    "@angular/elements": "^11.1.2",
+    "@angular/forms": "~11.0.0",
+    "@angular/material": "^11.0.0",
+    "@angular/platform-browser": "~11.0.0",
+    "@angular/platform-browser-dynamic": "~11.0.0",
+    "@angular/router": "~11.0.0",
     "@types/gsap": "^1.19.2",
     "gsap": "^1.20.6"
   },
@@ -55,27 +54,26 @@
     "ngx-color-picker": "^8.2.0",
     "rxjs": "6.5.4",
     "toxiclibsjs": "^0.3.3",
-    "zone.js": "^0.10.2"
+    "zone.js": "^0.11.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.24",
-    "@angular/animations": "^8.2.9",
-    "@angular/cdk": "^8.2.2",
-    "@angular/cli": "~8.3.8",
-    "@angular/common": "~8.2.9",
-    "@angular/compiler": "~8.2.9",
-    "@angular/compiler-cli": "~8.2.9",
-    "@angular/core": "~8.2.9",
-    "@angular/elements": "^8.2.9",
-    "@angular/forms": "~8.2.9",
-    "@angular/http": "^7.2.15",
-    "@angular/language-service": "~8.2.9",
-    "@angular/material": "^8.2.2",
-    "@angular/platform-browser": "~8.2.9",
-    "@angular/platform-browser-dynamic": "~8.2.9",
-    "@angular/router": "~8.2.9",
+    "@angular-devkit/build-angular": "^0.1100.1",
+    "@angular/animations": "^11.0.0",
+    "@angular/cdk": "^11.0.0",
+    "@angular/cli": "^11.0.1",
+    "@angular/common": "^11.0.0",
+    "@angular/compiler": "^11.0.0",
+    "@angular/compiler-cli": "^11.0.0",
+    "@angular/core": "^11.0.0",
+    "@angular/elements": "^11.1.2",
+    "@angular/forms": "^11.0.0",
+    "@angular/language-service": "~11.0.0",
+    "@angular/material": "^11.0.0",
+    "@angular/platform-browser": "^11.0.0",
+    "@angular/platform-browser-dynamic": "^11.0.0",
+    "@angular/router": "^11.0.0",
     "@types/jasmine": "~3.4.0",
-    "@types/node": "~12.7.11",
+    "@types/node": "^10.0.0",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^4.3.0",
@@ -90,6 +88,6 @@
     "protractor": "~5.4.2",
     "ts-node": "~8.4.1",
     "tslint": "~5.20.0",
-    "typescript": "~3.5.3"
+    "typescript": "^4.0.5"
   }
 }
