--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,6 +28,8 @@ jobs:
     - run: npm install -g yarn typings typescript@3.7.2 ts-node mocha protractor angular-cli karma-cli
     - run: npm run setup
     - run: yarn install
+    - run: yarn -v
+    - run: ng --version
     - run: yarn run lint
     - run: sudo apt-get install xvfb
     - run: xvfb-run yarn run test --watch false
