--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,7 +25,7 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
-    - run: npm install -g yarn typings typescript@3.7.2 ts-node mocha protractor angular-cli karma-cli
+    - run: npm install -g yarn typings typescript@3.7.2 ts-node mocha protractor @angular/cli karma-cli
     - run: npm run setup
     - run: yarn install
     - run: yarn -v
