--- a/package.json
+++ b/package.json
@@ -33,21 +33,21 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
-    "@types/gsap": "^1.19.2",
-    "gsap": "^1.20.6"
+    "@types/gsap": "~1.20.2",
+    "gsap": "~2.1.3"
   },
   "dependencies": {
     "@conversationai/perspectiveapi-simple-server": "^0.2.0",
     "@types/d3-interpolate": "^1.1.5",
     "@types/gapi": "^0.0.39",
-    "@types/gsap": "^1.19.2",
+    "@types/gsap": "~1.20.2",
     "@types/lodash": "^4.14.108",
     "@webcomponents/custom-elements": "^1.0.6",
     "codelyzer": "5.1.2",
     "concurrently": "^5.0.0",
     "d3-color": "^1.0.3",
     "d3-interpolate": "^1.1.4",
-    "gsap": "^3.6.0",
+    "gsap": "~2.1.3",
     "hammerjs": "^2.0.8",
     "jasmine": "3.5.0",
     "lodash": "^4.17.21",
